--- a/functions/config-ui/templates/page.html
+++ b/functions/config-ui/templates/page.html
@@ -15,8 +15,8 @@
 
         <nav>
           <ul>
+            <li><a href="/">HOME</a></li>
             <li><a href="../">BACK</a></li>
-            <li><a href="/config/">CONFIG</a></li>
           </ul>
         </nav>
       </div>
